[gd_scene load_steps=2 format=3 uid="uid://c5j8k9l2m3n4p"]

[ext_resource type="Script" path="res://src/scripts/ui/menus/pause_menu_simple.gd" id="1_pause_menu"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 250
process_mode = 3
script = ExtResource("1_pause_menu")

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BackgroundOverlay" type="ColorRect" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)
mouse_filter = 2

[node name="MainPanel" type="Panel" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 25.0
offset_right = -30.0
offset_bottom = -25.0

[node name="TitleContainer" type="VBoxContainer" parent="MenuContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="TitleLabel" type="Label" parent="MenuContainer/MainPanel/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MenuContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 20)

[node name="ButtonContainer" type="VBoxContainer" parent="MenuContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="MenuContainer/MainPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="Spacer2" type="Control" parent="MenuContainer/MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="SettingsButton" type="Button" parent="MenuContainer/MainPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"

[node name="Spacer3" type="Control" parent="MenuContainer/MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="MainMenuButton" type="Button" parent="MenuContainer/MainPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="Spacer4" type="Control" parent="MenuContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 10)